# DevTool

./: .gitignore  README.md  devtool.spec  pyproject.toml
src/devtool/: __main__.py  app.py  app.tcss  config.py  main.py
src/devtool/project_creators/: fastapi_creater.py  react_creator.py  svelte_creator.py
src/devtool/screens/: fastapi_config.py  new_project.py  react_config.py  stats.py  svelte_config.py
src/devtool/templates/fastapi/: pyproject.toml
src/devtool/templates/react/: package-lock.json  package.json
src/devtool/templates/svelte/: package-lock.json  package.json
src/devtool/utils/: project_validator.py
src/devtool/widgets/: home.py
